infrastructure/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  namespace: ecommerce
  labels:
    app: backend-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker-node
      containers:
      - name: backend-api
        image: huuhai123/backend-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3010
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-api
  namespace: ecommerce
spec:
  type: NodePort
  ports:
  - port: 3010
    targetPort: 3010
    nodePort: 30005
  selector:
    app: backend-api
