infrastructure/k8s/shipping-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-service
  namespace: ecommerce
  labels:
    app: shipping-service
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: shipping-service
  template:
    metadata:
      labels:
        app: shipping-service
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker-node
      containers:
      - name: shipping-service
        image: huuhai123/shipping-service:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "150m"
        ports:
        - containerPort: 3005
        startupProbe:
          httpGet:
            path: /health
            port: 3005
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 30
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 3005
          periodSeconds: 30
          failureThreshold: 3
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 3005
          periodSeconds: 10
          failureThreshold: 2
          timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
  namespace: ecommerce
spec:
  selector:
    app: shipping-service
  ports:
    - protocol: TCP
      port: 3005
      targetPort: 3005
  type: NodePort
