infrastructure/k8s/user-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-db
  namespace: ecommerce
  labels:
    app: user-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-db
  template:
    metadata:
      labels:
        app: user-db
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker-node
      containers:
      - name: postgres
        image: postgres:14-alpine
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "100m"
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data
          subPath: pgdata
        - name: init-script
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: pgdata
        persistentVolumeClaim:
          claimName: user-db-pvc
      - name: init-script
        configMap:
          name: user-db-init
          defaultMode: 0755
---
apiVersion: v1
kind: Service
metadata:
  name: user-db
  namespace: ecommerce
spec:
  type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
    nodePort: 30435
  selector:
    app: user-db
